# stylist-rs-tailwind

./: Cargo.toml  LICENSE  README.md  build.rs  config.toml
src/: config.toml  lib.rs  main.rs
src/backgrounds/: background_clip.rs  background_color_stops.rs  background_position.rs  background_repeat.rs  background_size.rs  mod.rs
src/borders/: border_radius.rs  border_radius1.rs  border_style.rs  border_width.rs  mod.rs  ring_offset_width.rs
src/effects/: background_blend_mode.rs  mod.rs
src/filters/: backdrop_brightness.rs  backdrop_hue_rotate.rs  backdrop_opacity.rs  sepia.rs
src/flexbox_and_grid/: align_content.rs  align_items.rs  align_self.rs  flex_wrap.rs  grid_auto_rows.rs  justify_content.rs  justify_items.rs  justify_self.rs  mod.rs  place_content.rs  place_items.rs
src/interactivity/: caret_color.rs  scroll_padding.rs  scroll_snap_align.rs  user_select.rs
src/layout/: columns.rs  container.rs  display.rs  float.rs  mod.rs  object_position.rs  top_right_bottom_left.rs  z_index.rs
src/sizing/: height.rs  min_height.rs  mod.rs  size.rs  width.rs
src/spacing/: margin.rs  mod.rs  padding.rs
src/svg/: fill.rs  stroke_width.rs
src/tables/: border_collapse.rs  border_spacing.rs
src/transforms/: rotate.rs
src/transition_and_animation/: animation.rs  mod.rs
src/typography/: font_family.rs  font_size.rs  font_weight.rs  mod.rs  text_alignment.rs  text_color.rs  text_decoration.rs  text_decoration_style.rs  text_overflow.rs  text_underline_offset.rs  vertical_align.rs
