[package]
name = "stylist-tailwind"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.13", features = ["macros"] }
scraper = { version = "0.18" }
