[package]
name = "stylist-tailwind"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Adds a bunch of tailwind classes for stylist-rs to quickly add css to yew applications"
keywords = ["stylist", "stylist-rs", "tailwind", "css", "yew"]

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.13", features = ["macros"] }
scraper = { version = "0.18" }
